# VideoEvent-SQL

./: README.md  __init__.py  numpy_result_example.py  opencv_result_example.py  pyproject.toml  yolo_result_example.py
