[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "videoeventsql"
version = "0.1.0"
description = "A small Python library for saving video AI results in SQL."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "VideoEventSQL"}]
keywords = ["video-ai", "sql", "sqlite", "yolo", "opencv", "numpy", "computer-vision"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["videoeventsql"]
